--- a/log-stream-service/build.gradle
+++ b/log-stream-service/build.gradle
@@ -7,6 +7,11 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    baseName = projectName
+    version =  projectVersion
+}
+
 dependencies {
     compile 'org.apache.commons:commons-collections4:4.1'
     compile "io.reactivex:rxnetty-http:${rxnetty_version}"
@@ -18,4 +23,4 @@ dependencies {
 
 apply plugin: 'application'
 
-mainClassName = "se.callista.rxjava.chunked.backpressure.LogServer"
+mainClassName = "se.callista.rxjava.LogServer"
