--- a/log-stream-service/gradle.properties
+++ b/log-stream-service/gradle.properties
@@ -18,3 +18,7 @@ rxnetty_version=0.5.2-rc.4
 netty_version=4.1.6.Final
 slf4j_version=1.7.6
 logback_version=1.1.7
+
+
+projectName=log-stream-service
+projectVersion=0.1.0
