--- a/rxclient/build.gradle
+++ b/rxclient/build.gradle
@@ -8,13 +8,12 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'rxclient'
-    version =  '0.1.0'
+    baseName = projectName
+    version =  projectVersion
 }
 
 repositories {
