--- a/rxclient/build.gradle
+++ b/rxclient/build.gradle
@@ -1,41 +1,25 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
-    }
-}
-
 apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
+
+mainClassName = "se.callista.rxjava.Application"
 
 jar {
-    baseName = projectName
-    version =  projectVersion
+	baseName = projectName
+	version = projectVersion
+
+	manifest {
+		attributes 'Main-Class': mainClassName
+	}
 }
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    // tag::jetty[]
-    compile("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
-    }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
-    // end::jetty[]
-    // tag::actuator[]
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    // end::actuator[]
-
-    compile("io.reactivex:rxnetty:0.4.19")
-    compile("io.reactivex:rxjava:1.2.2")
-    
-    testCompile("junit:junit")
+	compile("io.reactivex:rxnetty:0.4.19")
+	compile("io.reactivex:rxjava:1.2.2")
 }
