truck-position-service

--- a/truck-position-service/gradle.properties
+++ b/truck-position-service/gradle.properties
@@ -1,9 +1,11 @@
-projectName=log-stream-service
+projectName=truck-position-service
 projectGroup=se.callista.cadec2017.rxjava
 projectVersion=0.1.0
 
+
 rxjava_version=1.2.2
-rxnetty_version=0.5.2-rc.4
 netty_version=4.1.6.Final
+rxnetty_version=0.5.2-rc.4
 logback_version=1.1.7
 commons_collections4_version=4.1
+json_minimal_version=0.9.4
