--- a/log-stream-service/build.gradle
+++ b/log-stream-service/build.gradle
@@ -1,28 +1,30 @@
+group projectGroup
+version projectVersion
+
 apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = "se.callista.rxjava.LogStreamServer"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
 jar {
-    baseName = projectName
-    version =  projectVersion
+	baseName = projectName
+	version = projectVersion
+
 	manifest {
 		attributes 'Main-Class': mainClassName
 	}
 }
 
+repositories {
+	mavenCentral()
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
-    compile 'org.apache.commons:commons-collections4:4.1'
     compile "io.reactivex:rxnetty-http:${rxnetty_version}"
-    compile "io.reactivex:rxnetty-http:${rxnetty_version}"
-    compile "io.netty:netty-all:${netty_version}"
-    compile "ch.qos.logback:logback-classic:${logback_version}"
-    compile "ch.qos.logback:logback-core:${logback_version}"
+	compile "io.netty:netty-all:${netty_version}"
+	compile "org.apache.commons:commons-collections4:${commons_collections4_version}"
+	compile "ch.qos.logback:logback-classic:${logback_version}"
 }
