--- a/rxclient/build.gradle
+++ b/rxclient/build.gradle
@@ -1,3 +1,6 @@
+group projectGroup
+version projectVersion
+
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -20,6 +23,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	compile("io.reactivex:rxnetty:0.4.19")
-	compile("io.reactivex:rxjava:1.2.2")
+	compile("io.reactivex:rxnetty:${rxnetty_version}")
+	compile("io.reactivex:rxjava:${rxjava_version}")
+	compile "ch.qos.logback:logback-classic:${logback_version}"
 }
