--- a/rxclient/gradle.properties
+++ b/rxclient/gradle.properties
@@ -1,2 +1,8 @@
 projectName=rxclient
+projectGroup=se.callista.cadec2017.rxjava
 projectVersion=0.1.0
+
+
+rxjava_version=1.2.2
+rxnetty_version=0.5.1
+logback_version=1.1.7
