--- a/truck-position-service/gradle.properties
+++ b/truck-position-service/gradle.properties
@@ -8,4 +8,5 @@ netty_version=4.1.6.Final
 rxnetty_version=0.5.2-rc.4
 logback_version=1.1.7
 commons_collections4_version=4.1
+commons_lang3_version=3.4
 json_minimal_version=0.9.4
