Några fler microservices

--- a/services/supervisord.conf
+++ b/services/supervisord.conf
@@ -1,8 +1,11 @@
 [supervisord]
 nodaemon=true
 
-[program:coordinates]
-command=python /app/coordinates.py
+[program:coordinate_service]
+command=python /app/coordinate_service.py
 
-[program:weather_service_one]
-command=python /app/weather_service_one.py
+[program:books_service]
+command=python /app/books_service.py
+
+[program:personnummer_service]
+command=python /app/personnummer_service.py
